[package]
name = "file-dougu"
version = "0.1.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["gcs","web","fs"]
gcs = ["cloud-storage"]
fs = []
web = ["reqwest"]
cloud_test = []

[dependencies]
lazy_static = "1.4"
regex = "1.4"
url = "2.2"
futures-util = "0.3"
futures = "0.3"
log = "0.4"
bytes = "1.0"
http = "0.2"
flate2 = "1.0"
thiserror = "1"
backoff = {version="0.3",features = ["futures", "tokio"]}

reqwest = {version= "0.11", optional = true}
cloud-storage = {version="0.10", features =["global-client"], optional = true}

[dependencies.tokio]
version = "1"
features = ["macros", "rt"]
default-features = false

[dev-dependencies]
tokio-test = "0.4"
uuid = {version = "0.8" , features =["v4"]}
dotenv = "0.15"

